[gd_scene load_steps=7 format=4 uid="uid://smsqlk2bm8ok"]

[ext_resource type="Texture2D" uid="uid://82opar247kat" path="res://Assets/Tiles/platformertiles.png" id="1_c5erv"]
[ext_resource type="Script" uid="uid://bp7am01qxi47c" path="res://Scripts/level1.gd" id="1_lyd6k"]
[ext_resource type="PackedScene" uid="uid://btd70wfyuwmhw" path="res://Scenes/PauseMenu.tscn" id="3_y4dr7"]
[ext_resource type="PackedScene" uid="uid://b6ublycstdj8n" path="res://Scenes/player.tscn" id="4_lyd6k"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5hph3"]
texture = ExtResource("1_c5erv")
texture_region_size = Vector2i(32, 32)
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
7:1/0 = 0
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0 = 0
5:1/0 = 0
6:1/0 = 0
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_j7kpp"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_5hph3")

[node name="level1" type="Node2D"]
script = ExtResource("1_lyd6k")
player_scene = ExtResource("4_lyd6k")

[node name="wall" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAABAAAAADAAIAAAAAABEAAAADAAIAAAAAABIAAAADAAIAAAAAABMAAAADAAIAAAAAABQAAAADAAIAAAAAABUAAAADAAIAAAAAABYAAAADAAIAAAAAABcAAAADAAIAAAAAABgAAAADAAIAAAAAABkAAAADAAIAAAAAABoAAAABAAAAAAABABAAAAADAAIAAAABABEAAAADAAIAAAABABIAAAADAAIAAAABABMAAAADAAIAAAABABQAAAADAAIAAAABABUAAAADAAIAAAABABYAAAADAAIAAAABABcAAAADAAIAAAABABgAAAADAAIAAAABABkAAAADAAIAAAABABoAAAABAAAAAAACABAAAAADAAIAAAACABEAAAADAAIAAAACABIAAAADAAIAAAACABMAAAADAAIAAAACABQAAAADAAIAAAACABUAAAADAAIAAAACABYAAAADAAIAAAACABcAAAADAAIAAAACABgAAAADAAIAAAACABkAAAADAAIAAAACABoAAAABAAAAAAADABAAAAAEAAEAAAADABEAAAAEAAEAAAADABIAAAAEAAEAAAADABMAAAAEAAEAAAADABQAAAAEAAIAAAADABUAAAADAAIAAAADABYAAAADAAIAAAADABcAAAADAAIAAAADABgAAAADAAIAAAADABkAAAADAAIAAAADABoAAAABAAAAAAAEABAAAAADAAIAAAAEABEAAAADAAIAAAAEABIAAAADAAIAAAAEABMAAAADAAIAAAAEABQAAAADAAIAAAAEABUAAAADAAIAAAAEABYAAAADAAIAAAAEABcAAAADAAIAAAAEABgAAAADAAIAAAAEABkAAAADAAIAAAAEABoAAAABAAAAAAAFABAAAAADAAIAAAAFABEAAAADAAIAAAAFABIAAAADAAIAAAAFABMAAAADAAIAAAAFABQAAAADAAIAAAAFABUAAAADAAIAAAAFABYAAAADAAIAAAAFABcAAAADAAIAAAAFABgAAAADAAIAAAAFABkAAAADAAIAAAAFABoAAAABAAAAAAAGABAAAAADAAIAAAAGABEAAAADAAIAAAAGABIAAAADAAIAAAAGABMAAAADAAIAAAAGABQAAAADAAIAAAAGABUAAAADAAIAAAAGABYAAAADAAIAAAAGABcAAAADAAIAAAAGABgAAAADAAIAAAAGABkAAAADAAIAAAAGABoAAAABAAAAAAAHABAAAAADAAIAAAAHABEAAAADAAIAAAAHABIAAAADAAIAAAAHABMAAAADAAIAAAAHABQAAAADAAIAAAAHABUAAAADAAIAAAAHABYAAAADAAIAAAAHABcAAAADAAIAAAAHABgAAAADAAIAAAAHABkAAAADAAIAAAAHABoAAAABAAAAAAAIABAAAAADAAIAAAAIABEAAAADAAIAAAAIABIAAAADAAIAAAAIABMAAAADAAIAAAAIABQAAAADAAIAAAAIABUAAAADAAIAAAAIABYAAAADAAIAAAAIABcAAAADAAIAAAAIABgAAAADAAIAAAAIABkAAAADAAIAAAAIABoAAAABAAAAAAAJABAAAAADAAIAAAAJABEAAAADAAIAAAAJABIAAAADAAIAAAAJABMAAAADAAIAAAAJABQAAAADAAIAAAAJABUAAAADAAIAAAAJABYAAAADAAIAAAAJABcAAAAAAAAAAAAJABgAAAAAAAEAAAAJABkAAAAAAAEAAAAJABoAAAAFAAAAAGAKABAAAAADAAIAAAAKABEAAAADAAIAAAAKABIAAAADAAIAAAAKABMAAAADAAIAAAAKABQAAAADAAIAAAAKABUAAAADAAIAAAAKABYAAAADAAIAAAAKABcAAAABAAAAAAAKABgAAAABAAEAAAAKABkAAAABAAEAAAAKABoAAAABAAEAAAALABAAAAADAAIAAAALABEAAAADAAIAAAALABIAAAADAAIAAAALABMAAAADAAIAAAALABQAAAADAAIAAAALABUAAAADAAIAAAALABYAAAADAAIAAAALABcAAAABAAAAAAALABgAAAABAAEAAAALABkAAAABAAEAAAALABoAAAABAAEAAAAMABAAAAADAAIAAAAMABEAAAADAAIAAAAMABIAAAADAAIAAAAMABMAAAADAAIAAAAMABQAAAADAAIAAAAMABUAAAADAAIAAAAMABYAAAADAAIAAAAMABcAAAACAAAAAAAMABgAAAACAAEAAAAMABkAAAACAAEAAAAMABoAAAAFAAAAAAANABAAAAADAAIAAAANABEAAAADAAIAAAANABIAAAADAAIAAAANABMAAAADAAIAAAANABQAAAADAAIAAAANABUAAAADAAIAAAANABYAAAADAAIAAAANABcAAAADAAIAAAANABgAAAADAAIAAAANABkAAAADAAIAAAANABoAAAABAAAAAAAOABAAAAADAAIAAAAOABEAAAADAAIAAAAOABIAAAADAAIAAAAOABMAAAADAAIAAAAOABQAAAADAAIAAAAOABUAAAADAAIAAAAOABYAAAADAAIAAAAOABcAAAADAAIAAAAOABgAAAADAAIAAAAOABkAAAADAAIAAAAOABoAAAABAAAAAAAPABAAAAADAAIAAAAPABEAAAADAAIAAAAPABIAAAADAAIAAAAPABMAAAADAAIAAAAPABQAAAADAAIAAAAPABUAAAADAAIAAAAPABYAAAADAAIAAAAPABcAAAADAAIAAAAPABgAAAADAAIAAAAPABkAAAADAAIAAAAPABoAAAABAAAAAAAQABAAAAADAAIAAAAQABEAAAADAAIAAAAQABIAAAADAAIAAAAQABMAAAADAAIAAAAQABQAAAADAAIAAAAQABUAAAADAAIAAAAQABYAAAADAAIAAAAQABcAAAADAAIAAAAQABgAAAADAAIAAAAQABkAAAADAAIAAAAQABoAAAABAAAAAAARABAAAAADAAIAAAARABEAAAADAAIAAAARABIAAAADAAIAAAARABMAAAADAAIAAAARABQAAAADAAIAAAARABUAAAADAAIAAAARABYAAAADAAIAAAARABcAAAADAAIAAAARABgAAAADAAIAAAARABkAAAADAAIAAAARABoAAAABAAAAAAASABAAAAADAAIAAAASABEAAAADAAIAAAASABIAAAADAAIAAAASABMAAAADAAIAAAASABQAAAADAAIAAAASABUAAAADAAIAAAASABYAAAADAAIAAAASABcAAAADAAIAAAASABgAAAADAAIAAAASABkAAAADAAIAAAASABoAAAABAAAAAAATABAAAAAAAAEAAAATABEAAAAAAAEAAAATABIAAAAAAAEAAAATABMAAAAAAAEAAAATABQAAAAAAAEAAAATABUAAAAAAAEAAAATABYAAAAAAAEAAAATABcAAAAAAAEAAAATABgAAAAAAAEAAAATABkAAAAAAAEAAAATABoAAAAFAAAAAGD//w8AAAAFAAAAAFD//xAAAAACAAEAAAD//xEAAAACAAEAAAD//xIAAAACAAEAAAD//xMAAAACAAEAAAD//xQAAAACAAEAAAD//xUAAAACAAEAAAD//xYAAAACAAEAAAD//xcAAAACAAEAAAD//xgAAAACAAEAAAD//xkAAAACAAEAAAD//xoAAAAFAAAAAAAAAA8AAAABAAIAAAABAA8AAAABAAIAAAACAA8AAAABAAIAAAADAA8AAAAGAAAAADAEAA8AAAABAAIAAAAFAA8AAAABAAIAAAAGAA8AAAABAAIAAAAHAA8AAAABAAIAAAAIAA8AAAABAAIAAAAJAA8AAAABAAIAAAAKAA8AAAABAAIAAAALAA8AAAABAAIAAAAMAA8AAAABAAIAAAANAA8AAAABAAIAAAAOAA8AAAABAAIAAAAPAA8AAAABAAIAAAAQAA8AAAABAAIAAAARAA8AAAABAAIAAAASAA8AAAABAAIAAAATAA8AAAAFAAAAADA=")
tile_set = SubResource("TileSet_j7kpp")

[node name="PauseMenu" parent="." instance=ExtResource("3_y4dr7")]
visible = false

[node name="player_spawn" type="Marker2D" parent="."]
position = Vector2(334, 720)
